# mlops_hse

./: .gitignore  README.md  api.py  app.py  data.csv  main.py  preprocessed_data.csv  pyproject.toml  settings.py  tmp.py
data/: test_data.csv
mlops_pipeline/: ml_pipeline.py  models.py  preprocessing.py  streamlit.py
models/: Untitled.ipynb  models.py
