[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = "For MLOps course"
authors = ["Anna Bogoslavskaya, Veronika Zykova"]
readme = "README.md"
packages = [{include = "ml_api"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.40.1"
requests = "^2.32.3"
fastapi = "^0.115.4"
seaborn = "^0.13.2"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
